# dmklinger-ukrainian

./: Dockerfile  README.md  index.html  index.js  lookup.sh  pyproject.toml  server.py
.github/: copilot-instructions.md
.github/instructions/: llm-coding-agent.instructions.md
